[add] eslint prettier hook huskyでやっていたのを動作確認の為package.jsonに追記

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "prettier --check 'pages/**/*.tsx' 'styles/*.css' 'components/*",
+    "format": "prettier --write 'pages/**/*.tsx' 'styles/*.css' 'components/*' ",
     "prepare": "husky install"
   },
   "dependencies": {
